--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Esta es una estructura básica de HTML</h1>
+    </header>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
 
